# inv-map-g2o-tests

./: CMakeLists.txt  README.md  debug.txt  krishnaRaiyanPaul.json  map.json  poses.txt  test.g2o  test_transforms.mlx  visualize_map.m
log/: latest_list
src/: CMakeLists.txt  load_g2o.cpp  parsemap.cpp  rgb_slam.cpp
